@@ -1,14 +1,21 @@
 package pos.presentation.estadistica;
 
+import pos.logic.Categoria;
 import pos.logic.Rango;
 import pos.presentation.AbstractTableModel;
 
+import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.List;
 
 public class TableModel extends AbstractTableModel<Rango> {
+    private List<LocalDate> fechas;
 
-    public TableModel(int col[], List<Rango> rango) {
-        super(col,rango);
+    public TableModel(int cols[], List<Rango> rango,List<LocalDate> fechas) {
+        this.cols=cols;
+        this.rows=rango;
+        this.fechas=fechas;
+        initColNames();
     }
 
     @Override
@@ -21,7 +28,17 @@ public class TableModel extends AbstractTableModel<Rango> {
 
     @Override
     protected void initColNames() {
-        colNames = new String[rows.get(0).getImportes().size()+1];
+        if(rows.isEmpty()){
+            colNames=new String[1];
+        }else{
+            colNames = new String[rows.getFirst().getImportes().size()+1];
+        }
+
         colNames[0] = "Categoria";
+        for(int i=0;i<fechas.size();i++) {
+            colNames[i+1] = fechas.get(i).toString();
+        }
     }
+
+    public static final int CATEGORIA = 0;
 }
